<resources>
    <string name="app_name" translatable="false">Sokoban</string>
    <string name="level">Level</string>
    <string name="moves">Moves</string>
    <string name="boxes">Boxes</string>
    <string name="levelsFileError">Error loading the levels file</string>
    <string name="win_message">You won this level!</string>
    <string name="next_level">Next Level</string>
    <string name="restart">Restart</string>
    <string name="level_lose">Oh no! You\'ve lost this level.</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="play">Play Game</string>
    <string name="name">Name</string>
    <string name="level_abbr" translatable="false">L</string>
    <string name="final_msg">Thanks for playing!\nYour adventure is over.</string>
    <string name="main_menu">Main Menu</string>
    <string name="player_name">Player Name</string>
    <string name="pick_player_name">Pick your player name</string>
    <string name="new_game">New Game</string>
    <string name="go_back">Go Back</string>
</resources>
