<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="20sp"
    android:paddingLeft="20sp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:layout_marginEnd="10sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/max_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_abbr" />
    </LinearLayout>

</LinearLayout>