<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".SokobanActivity">

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal">

        <pt.isel.poo.g6li21d.Sokoban.view.FieldView
            android:id="@+id/level_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:label="@string/level" />

        <pt.isel.poo.g6li21d.Sokoban.view.FieldView
            android:id="@+id/moves_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:label="@string/moves" />

        <pt.isel.poo.g6li21d.Sokoban.view.FieldView
            android:id="@+id/boxes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:label="@string/boxes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tile_panel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <pt.isel.poo.g6li21d.Sokoban.view.TileLib.TilePanel
            android:id="@+id/tile_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:gridLine="0" />

        <pt.isel.poo.g6li21d.Sokoban.view.StyledButtonView
            android:id="@+id/restart"
            android:layout_marginTop="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"/>
    </LinearLayout>

    <pt.isel.poo.g6li21d.Sokoban.view.MessageView
        android:id="@+id/message_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>