<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/darkBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="25sp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:fontFamily="@font/aldrich"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="50sp" />

        <pt.isel.poo.g6li21d.Sokoban.view.StyledButtonView
            android:id="@+id/play_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:height="70sp"/>

        <pt.isel.poo.g6li21d.Sokoban.view.StyledButtonView
            android:id="@+id/select_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_level"
            android:height="70sp"/>

        <pt.isel.poo.g6li21d.Sokoban.view.StyledButtonView
            android:id="@+id/view_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard"
            android:height="70sp"/>
    </LinearLayout>

</LinearLayout>